--- a/sass/modules/mixin.scss
+++ b/sass/modules/mixin.scss
@@ -4,8 +4,9 @@
 }
 
 @mixin title-font{
-  font-family: 'Impact','Arial Rounded MT Bold',sans-serif;
+  font-family: 'Times New Roman','Times','Baskerville',sans-serif;
   letter-spacing: 1.5px;
+  font-weight: bold;
 }
 
 @mixin bg-config{
