--- a/sass/modules/variables.scss
+++ b/sass/modules/variables.scss
@@ -6,4 +6,7 @@ $pc-size: '(min-width: 1025px)';
 $more-than-tb: '(min-width: 561px)';
 $less-than-tb: '(max-width: 1024px)';
 
+$skillbox-flex: '(min-width: 800px)';
+$skillbox-block: '(max-width: 799px)';
+
 $contents-font: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
