--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,7 +11,7 @@ ul {
 
 .header {
   position: relative;
-  background-image: url("../images/header-image.jpg");
+  background-image: url("../images/header-image2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -69,27 +69,29 @@ ul {
       padding: 32px 56px 0;
       margin: auto; } }
 
-@media (max-width: 560px) {
-  .section {
-    margin-bottom: 100px; } }
-@media (min-width: 561px) {
-  .section {
-    margin-bottom: 160px; } }
-.section__title {
-  text-align: center;
-  font-family: 'Times New Roman','Times','Baskerville',sans-serif;
-  letter-spacing: 1.5px;
-  font-weight: bold; }
+.section {
+  position: relative; }
   @media (max-width: 560px) {
-    .section__title {
-      margin: 32px 0;
-      font-size: 24px;
-      font-size: 1.5rem; } }
+    .section {
+      margin-bottom: 100px; } }
   @media (min-width: 561px) {
-    .section__title {
-      margin: 56px 0;
-      font-size: 32px;
-      font-size: 2rem; } }
+    .section {
+      margin-bottom: 160px; } }
+  .section__title {
+    text-align: center;
+    font-family: 'Times New Roman','Times','Baskerville',sans-serif;
+    letter-spacing: 1.5px;
+    font-weight: bold; }
+    @media (max-width: 560px) {
+      .section__title {
+        margin: 32px 0;
+        font-size: 24px;
+        font-size: 1.5rem; } }
+    @media (min-width: 561px) {
+      .section__title {
+        margin: 56px 0;
+        font-size: 32px;
+        font-size: 2rem; } }
 
 @media (min-width: 561px) {
   .profile .flex-box {
@@ -109,7 +111,7 @@ ul {
   border-radius: 100px; }
   @media (max-width: 560px) {
     .profile__imagebox {
-      margin: auto; } }
+      margin: 0 auto 24px; } }
   @media (min-width: 561px) {
     .profile__imagebox {
       margin-right: 32px; } }
@@ -117,6 +119,23 @@ ul {
   font-family: "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "Yu Mincho Light", "YuMincho", "Yu Mincho", "游明朝体", sans-serif; }
   .profile__textbox__row {
     line-height: 25px; }
+  @media (max-width: 560px) {
+    .profile__textbox {
+      text-align: center; } }
+
+.question-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #777; }
+  @media (max-width: 560px) {
+    .question-icon {
+      font-size: 24px;
+      font-size: 1.5rem; } }
+  @media (min-width: 561px) {
+    .question-icon {
+      font-size: 30px;
+      font-size: 1.875rem; } }
 
 @media (min-width: 800px) {
   .skill-wrapper {
@@ -176,11 +195,18 @@ ul {
     .works__block {
       width: 30%; } }
   .works__block__image {
+    position: relative;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
     height: 350px;
     margin-bottom: 24px; }
+    .works__block__image .site-link {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0; }
   .works__block #corporate-site__bg {
     background-image: url("../images/corporate-site.png"); }
   .works__block #smacam__bg {
