--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -127,7 +127,7 @@ ul {
   position: absolute;
   top: 0;
   right: 0;
-  color: #777; }
+  color: #948C76; }
   @media (max-width: 560px) {
     .question-icon {
       font-size: 24px;
@@ -280,5 +280,23 @@ ul {
       .footer__text {
         font-size: 14px;
         font-size: 0.875rem; } }
+
+.question-box {
+  display: none;
+  position: absolute;
+  top: 24px;
+  right: 0;
+  padding: 32px 24px;
+  line-height: 25px;
+  color: #948C76;
+  background-color: #F9F8F5;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; }
+  .question-box li {
+    display: flex; }
+    .question-box li span {
+      display: block;
+      width: 50%; }
 
 /*# sourceMappingURL=style.css.map */
