--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -16,6 +16,10 @@ a{
   color: $text-color;
 }
 
+.marker{
+  background: linear-gradient(transparent 60%, #fca1a1 60%);
+}
+
 .bold-text{
   font-weight: bold;
 }
