--- a/sass/style.scss
+++ b/sass/style.scss
@@ -135,12 +135,14 @@
     color: $text-color;
     font-family: $contents-font;
     
-    &__row{
-      line-height: 25px;
+    @media #{$sp-size}{
+      margin: 0 auto;
+      width: 70%;
+      text-align: center;
     }
     
-    @media #{$sp-size}{
-      text-align: center;
+    &__row{
+      line-height: 25px;
     }
   }
 }
@@ -178,7 +180,7 @@
   @media #{$skillbox-block}{
     width: 100%;
     max-width: 400px;
-    height: 300px;
+    height: 350px;
     margin: 0 auto 32px;
     padding: 32px 16px;
   }
