--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -22,6 +22,26 @@ a {
 .link-hover:hover {
   text-decoration: underline; }
 
+.underline {
+  text-decoration: underline; }
+
+@media (min-width: 1025px) {
+  .masks:hover {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+    opacity: 0.5; }
+
+  .iconbox li {
+    transform: rotate(360deg); }
+    .iconbox li:hover {
+      animation: rotate 0.4s linear; }
+
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg); }
+    50% {
+      transform: rotate(180deg); }
+    100% {
+      transform: rotate(360deg); } } }
 .header {
   position: relative;
   background-image: url("../images/header-image2.jpg");
