--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -42,6 +42,15 @@ a {
       transform: rotate(180deg); }
     100% {
       transform: rotate(360deg); } } }
+@media (max-width: 560px) {
+  .fadein {
+    opacity: 0;
+    transform: translate(0, 100px);
+    transition: all 1500ms; }
+
+  .fadein.scrollin {
+    opacity: 1;
+    transform: translate(0, 0); } }
 .header {
   position: relative;
   background-image: url("../images/header-image2.jpg");
