--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -228,8 +228,12 @@ a {
 @media (min-width: 561px) {
   .works-wrapper {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; } }
+    flex-wrap: wrap;
+    justify-content: space-between; }
+    .works-wrapper:after {
+      content: '';
+      display: block;
+      width: 30%; } }
 
 @media (max-width: 560px) {
   .works__block {
@@ -238,7 +242,7 @@ a {
 @media (min-width: 561px) {
   .works__block {
     width: 30%;
-    margin-bottom: 56px; } }
+    margin: 0 8px 56px; } }
 .works__block__image {
   position: relative;
   background-repeat: no-repeat;
@@ -261,6 +265,9 @@ a {
 .works__block #animal__bg {
   border: 1px solid #eee;
   background-image: url("../images/animal-app.png"); }
+.works__block #webrary__bg {
+  border: 1px solid #eee;
+  background-image: url("../images/webrary.png"); }
 .works__block__textbox {
   font-family: "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "Yu Mincho Light", "YuMincho", "Yu Mincho", "游明朝体", sans-serif;
   text-align: center;
@@ -274,8 +281,6 @@ a {
 .iconbox {
   display: flex;
   margin: auto; }
-  .iconbox li:hover {
-    background-color: #f7f7f7; }
   @media (max-width: 560px) {
     .iconbox {
       width: 90%;
