edit works-section html/scss (all view)

--- a/sass/modules/variables.scss
+++ b/sass/modules/variables.scss
@@ -10,6 +10,7 @@ $skillbox-flex: '(min-width: 800px)';
 $skillbox-block: '(max-width: 799px)';
 
 $contents-font: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
+$mask_font: 'TsukuARdGothic-Regular','MS UI Gothic','ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
 
 //font-color
 $text-color: #515151;
